# chess_game

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
assets/shaders/: fragment_core.glsl  fragment_selection.glsl  vertex_core.glsl
assets/styles/: main.css
src/: CMakeLists.txt  Errors.h  main.cpp
src/ai/: CMakeLists.txt  ai_player.cpp  ai_player.h
src/game/: Board.cpp  Board.h  CMakeLists.txt  Errors.cpp  Errors.h  Game.cpp  Game.h
src/game/pieces/: Bishop.h  King.cpp  King.h  Knight.cpp  Piece.cpp  Piece.h  Queen.h  Rook.cpp  Rook.h
src/launcher/: CMakeLists.txt  launcher.cpp  launcher.h  main.cpp
src/launcher/pages/about/: about_window.cpp  about_window.h  about_window.ui  heart_graphic.cpp  heart_graphic.h
src/launcher/pages/game/: game_window.cpp  game_window.h
src/launcher/pages/main/: main_window.cpp  main_window.h  main_window.ui  mainwindow.h  mainwindow.ui
src/launcher/pages/new_game/: new_game_window.cpp  new_game_window.h  new_game_window.ui
src/launcher/pages/states/: states_window.cpp  states_window.h  states_window.ui
src/launcher/resources/: resources.qrc
src/launcher/styles/: main.css
src/modules/: Board.cpp  Board.h  Errors.cpp  Errors.h  Game.cpp  Game.h  Player.h
src/modules/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/renderers/: CMakeLists.txt  Console.cpp  console.cpp  console.h  renderer_2D.cpp  renderer_2D.h
src/renderers/2d/: CMakeLists.txt  renderer_2D.cpp  renderer_2D.h  sound_manager.cpp  sound_manager.h  text_renderer.cpp  text_renderer.h
src/renderers/3d/: CMakeLists.txt  renderer_3D.cpp  renderer_3D.h  renderer_3d.cpp  renderer_3d.h
src/renderers/3d/engine/: animation_handler.cpp  animation_handler.h  camera.cpp  camera.h  directional_light.cpp  directional_light.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  object.cpp  object.h  point_light.cpp  point_light.h  scene.cpp  scene.h  shader.cpp  shader.h  sky_box.cpp  sky_box.h  texture.cpp  texture.h  vertex.h  window.cpp  window.h
src/renderers/3d/primitives/: plane.cpp  plane.h  pyramid.cpp  pyramid.h  triangle.cpp  triangle.h
src/renderers/3d/shaders/: fragment_core.glsl
src/renderers/console/: console.cpp  console.h
test/: CMakeLists.txt  board.cpp  board.h  chess_test.cpp  game.cpp  game.h
test/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
test/plays/: anderssen_vs_kieseritzky.txt  fools_mate.txt  hohmeister_vs_frank.txt  scholars_mate.txt
